[gd_scene load_steps=3 format=3 uid="uid://uonyfi0c5qd1"]

[ext_resource type="Script" path="res://Src/lobbyListItem.gd" id="1_54ggq"]
[ext_resource type="PackedScene" uid="uid://vqk4lob58wah" path="res://Scenes/MyButton.tscn" id="2_ekjhr"]

[node name="LobbyListItem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54ggq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="LobbyNameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "LobbyName"
clip_text = true
text_overrun_behavior = 1

[node name="PlayerCountLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PlayerCount"

[node name="StatusLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Status"

[node name="JoinButton" parent="HBoxContainer" instance=ExtResource("2_ekjhr")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"littleButton"
text = "Join"

[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_onJoinPressed"]
